# mini_lolly

./: .gitignore  README.md  index.html  prettier.config.js
firmware/: platformio.ini
firmware/src/: main.cpp
lolly_pcb/: mapping.py  pcb.py  pyproject.toml  schema.py  spiral_pattern.py
lolly_pcb/controller/: controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  esp32_adjusted.bak  esp32_adjusted.kicad_sym  fp-info-cache  sym-lib-table  ~controller.kicad_sch.lck
lolly_pcb/controller/controller.pretty/: 1P2T SPDT RUNCCI-YUN.kicad_mod  components.kicad_sym  esp32 s2-mini dev board.kicad_mod  lolly_comp.kicad_sym  small thoughhole button.kicad_mod  tp4056 module.kicad_mod  usb-c 5v breakout.kicad_mod
lolly_pcb/mini_lolly_pcb/: _autosave-mini_lolly_pcb.kicad_pcb  controller_pcb.kicad_pcb  controller_pcb.kicad_prl  controller_pcb.kicad_pro  fp-info-cache  lolly.kicad_sch  mini_lolly_pcb.kicad_pcb  mini_lolly_pcb.kicad_prl  mini_lolly_pcb.kicad_pro  mini_lolly_pcb.kicad_sch  place_footprints.ini  template.kicad_sch
simulator/: draw.js  image_mapper.js  lolly.css  lolly.js  main.js  math.js  pattern.js  patterns.js
simulator/lib/: draw.js
simulator/patterns/: color_arms.js  color_rings.js  rotating_image.js
